--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-							<h1><span>Louie Jie Mahusay</span></h1>
-							<h3><span>Web Developer / Photographer</span></h3>
+							<h1><span>Reynaldi Arya Bavista</span></h1>
+							<h3><span id="typed5"></span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
