--- a/index.html
+++ b/index.html
@@ -627,9 +627,21 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<!-- Typewriter -->
+	<script src="js/typed.min.js"></script>
+	<script>
+	   var typed5 = new Typed('#typed5', {
+	    strings: ['Web Developer'],
+	    typeSpeed: 100,
+	    backSpeed: 50,
+	    cursorChar: '_',
+	    // shuffle: true,
+	    smartBackspace: false,
+	    loop: true
+	  });
+	</script>
 
 	</body>
 </html>
