--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2021 Reynaldi Arya. All Rights Reserved.</p>
+					<center><p>&copy; 2021 Reynaldi Arya. All Rights Reserved.</p></center>
 				</div>
 			</div>
 		</div>
@@ -638,7 +638,7 @@
 	    backSpeed: 50,
 	    cursorChar: '_',
 	    // shuffle: true,
-	    smartBackspace: false,
+	    smartBackspace: true,
 	    loop: true
 	  });
 	</script>
