--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Reynaldi Arya Bavista</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+62</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">reynaldiarya.id@gmail.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">ibest.id</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">Bangoan City</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
