--- a/index.html
+++ b/index.html
@@ -93,14 +93,6 @@
 					<h2>Hello There!</h2>
 					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
 					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
-					<p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-						</ul>
-					</p>
 				</div>
 			</div>
 		</div>
@@ -606,7 +598,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10">
-					<center><p>&copy; 2021 Reynaldi Arya. All Rights Reserved.</p></center>
+					<p class="text-center">&copy; 2021 Reynaldi Arya. All Rights Reserved.</p>
 				</div>
 			</div>
 		</div>
