--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 	</head>
 	<body>
 		
-	<div class="fh5co-loader"></div>
+	<div class="ra-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<header id="ra-header" class="ra-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -58,7 +58,7 @@
 							<h1><span>Reynaldi Arya Bavista</span></h1>
 							<h3><span id="typed5"></span></h3>
 							<p>
-								<ul class="fh5co-social-icons">
+								<ul class="ra-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
 									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
@@ -72,10 +72,10 @@
 		</div>
 	</header>
 
-	<div id="fh5co-about" class="animate-box">
+	<div id="ra-about" class="animate-box">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center ra-heading">
 					<h2>About Me</h2>
 				</div>
 			</div>
@@ -98,10 +98,10 @@
 		</div>
 	</div>
 
-	<div id="fh5co-resume" class="fh5co-bg-color">
+	<div id="ra-resume" class="ra-bg-color">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center ra-heading">
 					<h2>My Resume</h2>
 				</div>
 			</div>
@@ -207,11 +207,11 @@
 	</div>
 	
 
-	<div id="fh5co-features" class="animate-box">
+	<div id="ra-features" class="animate-box">
 		<div class="container">
 			<div class="services-padding">
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<div class="col-md-8 col-md-offset-2 text-center ra-heading">
 						<h2>My Services</h2>
 					</div>
 				</div>
@@ -297,10 +297,10 @@
 		</div>
 	</div>
 
-	<div id="fh5co-skills" class="animate-box">
+	<div id="ra-skills" class="animate-box">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center ra-heading">
 					<h2>Skills</h2>
 				</div>
 			</div>
@@ -404,10 +404,10 @@
 		</div>
 	</div>
 
-	<div id="fh5co-work" class="fh5co-bg-dark">
+	<div id="ra-work" class="ra-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center ra-heading">
 					<h2>Work</h2>
 				</div>
 			</div>
@@ -480,17 +480,17 @@
 		</div>
 	</div>
 
-	<div id="fh5co-blog">
+	<div id="ra-blog">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center ra-heading">
 					<h2>Post on Medium</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
+					<div class="ra-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
@@ -505,7 +505,7 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
+					<div class="ra-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
@@ -520,7 +520,7 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
+					<div class="ra-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
@@ -538,11 +538,11 @@
 		</div>
 	</div>
 	
-	<div id="fh5co-started" class="fh5co-bg-dark">
+	<div id="ra-started" class="ra-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center ra-heading">
 					<h2>Hire Me!</h2>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
@@ -551,53 +551,16 @@
 		</div>
 	</div>
 
-	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
+	<div id="ra-consult">
+		<div class="video ra-video" style="background-image: url(images/cover_bg_1.jpg);">
 			<div class="overlay"></div>
 		</div>
-		<div class="choose animate-box">
-			<h2>Contact</h2>
-			<form action="#">
-				<div class="row form-group">
-					<div class="col-md-6">
-						<input type="text" id="fname" class="form-control" placeholder="Your firstname">
-					</div>
-				</div>
-				<div class="row form-group">
-					<div class="col-md-6">
-						<input type="text" id="lname" class="form-control" placeholder="Your lastname">
-					</div>
-				</div>
 
-				<div class="row form-group">
-					<div class="col-md-12">
-						<input type="text" id="email" class="form-control" placeholder="Your email address">
-					</div>
-				</div>
-
-				<div class="row form-group">
-					<div class="col-md-12">
-						<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
-					</div>
-				</div>
-
-				<div class="row form-group">
-					<div class="col-md-12">
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
-					</div>
-				</div>
-				<div class="form-group">
-					<input type="submit" value="Send Message" class="btn btn-primary">
-				</div>
-
-			</form>	
-		</div>
-	</div>
 	
-	<div id="fh5co-footer">
+	<div id="ra-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-10">
+				<div class="col-md-12">
 					<p class="text-center">&copy; 2021 Reynaldi Arya. All Rights Reserved.</p>
 				</div>
 			</div>
