--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 									<li><a href="https://twitter.com/reynaldiaryaa"><i class="icon-twitter2"></i></a></li>
 									<li><a href="https://www.instagram.com/reynaldiaryaa"><i class="icon-instagram2"></i></a></li>
 									<li><a href="https://www.linkedin.com/reynaldiarya"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://ibest.id"><i class="icon-blog2"></i></a></li>
-									<li><a href="https://avergos.com"><i class="icon-website2"></i></a></li>
+									<li><a href="https://ibest.id"><i class="icon-link2"></i></a></li>
+									<li><a href="https://avergos.com"><i class="icon-link2"></i></a></li>
 								</ul>
 							</p>
 						</div>
