--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 	<script src="js/typed.min.js"></script>
 	<script>
 	   var typed5 = new Typed('#typed5', {
-	    strings: ['Photographer'];['Videographer'];['Internet Marketer'];['Blogger'];['Web Developer'],
+	    strings: ['Photographer; Videographer; Internet Marketer; Blogger; Web Developer'],
 	    typeSpeed: 100,
 	    backSpeed: 50,
 	    cursorChar: '_',
