--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 	</div>
 
 	
-	<div id="ra-started" class="ra-bg-dark">
+	<div id="ra-started" class="ra-bg-color">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
