--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="ra-loader"></div>
 	
 	<div id="page">	
-	<header id="ra-header" class="ra-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<header id="ra-header" class="ra-cover js-fullheight" role="banner" style="background-image:url(images/bg.png);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
