--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
+							<div class="profile-thumb" style="background: url(images/pp.png);"></div>
 							<h1><span>Reynaldi Arya Bavista</span></h1>
 							<h3><span id="typed5"></span></h3>
 							<p>
