--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
-								<div class="timeline">
+								<div class="timeline-body">
 									<h3 class="timeline-title">UI/UX Designer</h3>
 									<span class="company">Company Name - 2010 - 2012</span>
 								</div>
