--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	</div>
 	
 	
-	<div id="ra-footer" class="ra-bg-dark>
+	<div id="ra-footer" class="ra-bg-dark">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
