--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE HTML>
 <html>
+	
+	
+	<--cie ngintip-->
+	<--👋 Hi, I’m Reynaldi-->
+	<--I’m currently learning several languages from several countries-->
+	<--i love my exgf-->
+	
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
