--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML>
 <html>
-	
-	
-	<--cie ngintip-->
-	<--👋 Hi, I’m Reynaldi-->
-	<--I’m currently learning several languages from several countries-->
-	<--i love my exgf-->
+	<!--cie ngintip-->
+	<!--👋 Hi, I’m Reynaldi-->
+	<!--I’m currently learning several languages from several countries-->
+	<!--i love my exgf-->
 	
 	<head>
 	<meta charset="utf-8">
@@ -30,7 +28,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	
+
+		
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
