--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>Hi let me introduce myself. My name is Reynaldi Arya Bavista. I was born in Tulungagung, April 16. My hobbies are watching movies, listening to songs, and playing games. I am a recent graduate. I am interested in web development.</p>
 				</div>
 			</div>
 		</div>
