--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>Hi let me introduce myself. My name is Reynaldi Arya Bavista. I was born in Tulungagung, April 16. My hobbies are watching movies, listening to songs, and playing games. I am a recent graduate. I am interested in web development.</p>
+					<p>Hi let me introduce myself, my name is Reynaldi Arya Bavista. I was born in Tulungagung, April 16. My hobbies are watching movies, listening to songs, and playing games. I’m a new information systems vocational student. I’m pursuing my Diploma at Airlangga University. I have a passion on developing web and designing web ( UI dan UX ).
 				</div>
 			</div>
 		</div>
