--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Reynaldi Arya Bavista</span></li>
+						<li><span class="first-block">Name:</span><span class="second-block">Reynaldi Arya Bavista</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+62 81 331 976 201</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">reynaldiarya.id@gmail.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">ibest.id</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
