--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Reynaldi Arya</title>
-	<link rel="shortcut icon" href="images/ra.ico"> 
+	<link rel="shortcut icon" href="images/favicon.ico"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Reynaldi Arya	" />
 	<meta name="keywords" content="Reynaldi Arya" />
