--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<li><a href="https://twitter.com/reynaldiaryaa"><i class="icon-twitter2"></i></a></li>
 									<li><a href="https://www.instagram.com/reynaldiaryaa"><i class="icon-instagram2"></i></a></li>
 									<li><a href="https://www.linkedin.com/reynaldiarya"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://ibest.id"><i class="icon-earth"></i></a></li>
+									<li><a href="https://reynaldiab.com"><i class="icon-earth"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -90,9 +90,9 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Name:</span><span class="second-block">Reynaldi Arya Bavista</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+62 81 331 976 201</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+62 821 3000 5337</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">reynaldiarya.id@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">ibest.id</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">reynaldiab.com</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
