--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<ul class="info">
 						<li><span class="first-block">Name:</span><span class="second-block">Reynaldi Arya Bavista</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+62 821 3000 5337</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">reynaldiarya.id@gmail.com</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">halo@reynaldiab.com</span></li>
 						<li><span class="first-block">Website:</span><span class="second-block">reynaldiab.com</span></li>
 					</ul>
 				</div>
